--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Contact Center AI | Observe.AI</title>
+	<title>Observe.AI</title>
 	<meta name="viewport" content="width=1024">
 	<link rel="icon" type="image/png" sizes="64x64" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTBm9H8xPxFPXx6wzby6nW91HPhy0q_YHQ7xIiMRGh_267RjnK90b-OUEYHYflLbOSk1U4&usqp=CAU">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
@@ -158,7 +158,7 @@
     	<img class="img32" src="https://global-uploads.webflow.com/5caac3a8d636b7cfc2606d35/5ffd4cc93fd40a40116a9a2c_INTELISYS%20LOGO%20WHITE%403x.png">
     	<p class="e16">Enable Agents with the Power of Contact Center AI</p>
     	<div class="d12">
-    		<p class="e17">GET DEMO FROM US</p>
+    		<p class="e17">Click Here For Demo</p>
     	</div>
     </div>
     
