Demo text chnages

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     	<img class="img32" src="https://global-uploads.webflow.com/5caac3a8d636b7cfc2606d35/5ffd4cc93fd40a40116a9a2c_INTELISYS%20LOGO%20WHITE%403x.png">
     	<p class="e16">Enable Agents with the Power of Contact Center AI</p>
     	<div class="d12">
-    		<p class="e17">Click Here For Demo</p>
+    		<p class="e17">Demo</p>
     	</div>
     </div>
     
