--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     	<img class="img30" src="https://global-uploads.webflow.com/5caac3a8d636b7cfc2606d35/601786897ad9e27583f20634_UJET%20LOGO%20WHITE%403x.png">
     	<img class="img31" src="https://global-uploads.webflow.com/5caac3a8d636b7cfc2606d35/5ffd4cc9e3ab615cb58b98a6_HCL%20LOGO%20WHITE%403x.png">
     	<img class="img32" src="https://global-uploads.webflow.com/5caac3a8d636b7cfc2606d35/5ffd4cc93fd40a40116a9a2c_INTELISYS%20LOGO%20WHITE%403x.png">
-    	<p class="e16">Enable Agents with the Power of Contact Center AI</p>
+    	<p class="e16">Enable Agents</p>
     	<div class="d12">
     		<p class="e17">Demo</p>
     	</div>
